WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271726
REGRESSION (
273978@main
): JPEG2000 Images in this PDF fail to display
https://bugs.webkit.org/show_bug.cgi?id=271726
Summary
REGRESSION (273978@main): JPEG2000 Images in this PDF fail to display
Said Abou-Hallawa
Reported
2024-03-26 13:55:40 PDT
Created
attachment 470613
[details]
test case Open the attached test case. Result: Nothing is displayed Expected: A green square in the PDF. JPEG2000 can be supported only in PDF plugin, embedded objects. But it should still be disabled anywhere else.
Attachments
test case
(11.48 KB, application/pdf)
2024-03-26 13:55 PDT
,
Said Abou-Hallawa
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2024-03-26 13:56:12 PDT
rdar://125291465
Said Abou-Hallawa
Comment 2
2024-03-26 13:58:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26480
EWS
Comment 3
2024-03-27 07:30:03 PDT
Committed
276734@main
(4c3caa5b7d5d): <
https://commits.webkit.org/276734@main
> Reviewed commits have been landed. Closing PR #26480 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug