REGRESSION (273978@main): JPEG2000 Images in this PDF fail to display https://bugs.webkit.org/show_bug.cgi?id=271726 rdar://125291465

Reviewed by Simon Fraser.

JPEG2000 can be supported only in PDF plugin, embedded objects and images. But
it should still be disabled anywhere else.

* LayoutTests/pdf/unifiedpdf/images/jpeg2000-embed-pdf-expected.html: Added.
* LayoutTests/pdf/unifiedpdf/images/jpeg2000-embed-pdf.html: Added.
* LayoutTests/pdf/unifiedpdf/resources/400x400-green-jpeg2000.pdf: Added.
* Source/WebCore/platform/graphics/cg/UTIRegistry.cpp:
(WebCore::allowableImageTypes):

Canonical link: https://commits.webkit.org/276734@main